# articulo-iwise

./: README.md  constantes.py  exploratorio.py  geografía.py  modelo.py  principal.py  pyproject.toml  traducciones.json  traducciones.py  validación.py
