[tool.poetry]
name = "iwise"
version = "0.1.0"
description = ""
authors = ["julienmalard <julien.malard@mail.mcgill.ca>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
pymc = "^5.5.0"
pyshp = "^2.3.1"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
